objects/Opportunity.object
<CustomObject>
    <businessProcesses>
        <fullName>Sales</fullName>
        <description>Sales process</description>
        <isActive>true</isActive>
        <values>
            <fullName>1st Meeting Set</fullName>
        </values>
        <values>
            <fullName>Application Review</fullName>
        </values>
        <values>
            <fullName>Closed Lost</fullName>
        </values>
        <values>
            <fullName>Closed Won</fullName>
        </values>
        <values>
            <fullName>Contract Signing</fullName>
        </values>
        <values>
            <fullName>Info Gathering</fullName>
        </values>
        <values>
            <fullName>Negotiation%2FReview</fullName>
        </values>
        <values>
            <fullName>Pricing Complete</fullName>
        </values>
        <values>
            <fullName>Proposal Complete</fullName>
        </values>
        <values>
            <fullName>Submit to Pricing</fullName>
        </values>
        <values>
            <fullName>Verbal Agreement</fullName>
        </values>
    </businessProcesses>
    <fields>
        <fullName>Aligned_Transferred_Client__c</fullName>
        <label>Aligned/Transferred Client</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ApplicationDate__c</fullName>
        <label>Application Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>BDM_Notes__c</fullName>
        <label>BDM Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Benefits_Administration__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Benefits Administration</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Business_Type__c</fullName>
        <label>Business Type</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Client_Contact__c</fullName>
        <formula>Primary_Contact_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Client Contact</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Client_Legal_Name__c</fullName>
        <formula>Account.Client_Legal_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Client Legal Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Client_Name__c</fullName>
        <label>Client Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Client_Relationship__c</fullName>
        <label>Client Relationship</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Clientspace_Application_Date__c</fullName>
        <description>Data in this field were migrated from ClientSpace 4/20.</description>
        <inlineHelpText>Data in this field were migrated from ClientSpace 4/20.</inlineHelpText>
        <label>Application Date (ClientSpace Import)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Clientspace_Pricing_Approval_Date__c</fullName>
        <description>Data in this field were migrated from ClientSpace 4/20.</description>
        <inlineHelpText>Data in this field were migrated from ClientSpace 4/20.</inlineHelpText>
        <label>Pricing Approval Date(ClientSpaceImport)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Clientspace_Pricing_Submit_Date__c</fullName>
        <description>Data in this field were migrated from ClientSpace 4/20.</description>
        <inlineHelpText>Data in this field were migrated from ClientSpace 4/20.</inlineHelpText>
        <label>Pricing Submit Date (ClientSpace Import)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Clientspace_Proposal_Date__c</fullName>
        <description>Data in this field were migrated from ClientSpace 4/20.</description>
        <inlineHelpText>Data in this field were migrated from ClientSpace 4/20.</inlineHelpText>
        <label>Proposal Date (ClientSpace Import)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Closed_Detail__c</fullName>
        <description>Detail of why the Opp was Closed Lost (including how lost, who lost to, etc)</description>
        <inlineHelpText>Detail of why the Opp was Closed Lost (including how lost, who lost to, etc)</inlineHelpText>
        <label>Closed Detail</label>
        <length>2500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Closed_Reason__c</fullName>
        <description>The primary reason the Opp was Closed. More info can be entered in Close Detail field</description>
        <inlineHelpText>The primary reason the Opp was Closed. More info can be entered in Close Detail field</inlineHelpText>
        <label>Closed Reason</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Price</fullName>
                </value>
                <value>
                    <fullName>Service</fullName>
                </value>
                <value>
                    <fullName>Product</fullName>
                </value>
                <value>
                    <fullName>Relationship</fullName>
                </value>
                <value>
                    <fullName>Length of Process</fullName>
                    <label>Process</label>
                </value>
                <value>
                    <fullName>Non-responsiveness</fullName>
                    <label>Prospect Non Responsiveness</label>
                </value>
                <value>
                    <fullName>Bad Timing</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Closing_Status__c</fullName>
        <description>This field will be renamed to Forecast Category once we go live</description>
        <label>Closing Status (TO BE FORECAST CATEGORY)</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Pipeline</fullName>
                </value>
                <value>
                    <fullName>Best Case</fullName>
                </value>
                <value>
                    <fullName>Commit</fullName>
                </value>
                <value>
                    <fullName>01 - Closing Likely</fullName>
                    <isActive>false</isActive>
                    <label>01 - Closing Likely</label>
                </value>
                <value>
                    <fullName>02 - Rolling 30</fullName>
                    <isActive>false</isActive>
                    <label>02 - Rolling 30</label>
                </value>
                <value>
                    <fullName>03 - On the Radar</fullName>
                    <isActive>false</isActive>
                    <label>03 - On the Radar</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Competitor_List__c</fullName>
        <label>Head to Head Competitors</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Administaff</fullName>
                </value>
                <value>
                    <fullName>ADP</fullName>
                </value>
                <value>
                    <fullName>Advantech</fullName>
                </value>
                <value>
                    <fullName>AlohaBusinessServices</fullName>
                </value>
                <value>
                    <fullName>Alphastaff</fullName>
                </value>
                <value>
                    <fullName>Altres</fullName>
                </value>
                <value>
                    <fullName>Ceridian</fullName>
                </value>
                <value>
                    <fullName>CoAdvantage</fullName>
                </value>
                <value>
                    <fullName>ELS</fullName>
                </value>
                <value>
                    <fullName>Employment Experts</fullName>
                </value>
                <value>
                    <fullName>FrankCrum</fullName>
                </value>
                <value>
                    <fullName>Gevity</fullName>
                </value>
                <value>
                    <fullName>HawaiiWorkplace</fullName>
                </value>
                <value>
                    <fullName>Heartland</fullName>
                </value>
                <value>
                    <fullName>HiHR</fullName>
                </value>
                <value>
                    <fullName>HRAH</fullName>
                </value>
                <value>
                    <fullName>HRBenefix</fullName>
                </value>
                <value>
                    <fullName>InSource</fullName>
                </value>
                <value>
                    <fullName>IntuitPayroll</fullName>
                </value>
                <value>
                    <fullName>MBA</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
                <value>
                    <fullName>NELCO</fullName>
                </value>
                <value>
                    <fullName>Oasis</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>PAU</fullName>
                </value>
                <value>
                    <fullName>PaySmart</fullName>
                </value>
                <value>
                    <fullName>Progressive</fullName>
                </value>
                <value>
                    <fullName>Southeastern</fullName>
                </value>
                <value>
                    <fullName>Talent HR Solutions</fullName>
                </value>
                <value>
                    <fullName>TNT Payroll Services</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Construction_Pricing__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Construction based pricing</description>
        <inlineHelpText>Construction based pricing</inlineHelpText>
        <label>Construction Pricing</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Contact_Title__c</fullName>
        <formula>Primary_Contact__r.Title</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact Title</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contract_Signed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Contract Signed?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Contract_Start_Date__c</fullName>
        <label>Contract Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Credit_Score__c</fullName>
        <description>Credit score of the prospect</description>
        <inlineHelpText>Credit score of the prospect</inlineHelpText>
        <label>Credit Score</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_Benefits_Carrier_1_Renewal_Date__c</fullName>
        <description>Organization's current benefits carrier 1 renewal date. QMI info used during prospecting potential client</description>
        <inlineHelpText>Organization's current benefits carrier 1 renewal date. QMI info used during prospecting potential client</inlineHelpText>
        <label>Current Benefits Carrier 1 Renewal Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Current_Benefits_Carrier_1__c</fullName>
        <description>Organization's current benefits carrier. QMI info used during prospecting potential client.</description>
        <inlineHelpText>Organization's current benefits carrier. QMI info used during prospecting potential client.</inlineHelpText>
        <label>Current Benefits Carrier 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_Benefits_Carrier_2_Renewal_Date__c</fullName>
        <description>Organization's current benefits carrier 2 renewal date. QMI info used during prospecting potential client</description>
        <inlineHelpText>Organization's current benefits carrier 2 renewal date. QMI info used during prospecting potential client</inlineHelpText>
        <label>Current Benefits Carrier 2 Renewal Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Current_Benefits_Carrier_2__c</fullName>
        <description>Organization's current benefits carrier 2.QMI info used during prospecting potential client</description>
        <inlineHelpText>Organization's current benefits carrier 2.QMI info used during prospecting potential client</inlineHelpText>
        <label>Current Benefits Carrier 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_Dental_Carrier__c</fullName>
        <description>Organization's Dental Carrier. QMI info used during prospecting potential client</description>
        <inlineHelpText>Organization's Dental Carrier. QMI info used during prospecting potential client</inlineHelpText>
        <label>Current Dental Carrier</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_HC_Carrier__c</fullName>
        <label>Current Health Care Provider</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>HMAA</fullName>
                </value>
                <value>
                    <fullName>HMSA</fullName>
                </value>
                <value>
                    <fullName>Kaiser</fullName>
                </value>
                <value>
                    <fullName>UHA</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                    <label>Other/Unknown</label>
                </value>
                <value>
                    <fullName>N/A - Start-Up</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Current_Payroll_Method__c</fullName>
        <description>Organization's current payroll method. QMI info used during prospecting potential client</description>
        <inlineHelpText>Organization's current payroll method. QMI info used during prospecting potential client</inlineHelpText>
        <label>Current Payroll Method</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>In House</fullName>
                </value>
                <value>
                    <fullName>Payroll Company</fullName>
                </value>
                <value>
                    <fullName>PEO</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Current_Payroll_Provider__c</fullName>
        <description>Organization's current payroll provider. QMI info used during prospecting potential client. Date of lead read-only because populated from Opportunity (if not Opp, fields from CS Import)</description>
        <inlineHelpText>Organization's current payroll provider. QMI info used during prospecting potential client. Date of lead read-only because populated from Opportunity (if not Opp, fields from CS Import)</inlineHelpText>
        <label>Current Payroll Provider</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Administaff</fullName>
                </value>
                <value>
                    <fullName>ADP</fullName>
                </value>
                <value>
                    <fullName>Advantech</fullName>
                </value>
                <value>
                    <fullName>AlohaBusinessServices</fullName>
                </value>
                <value>
                    <fullName>Alphastaff</fullName>
                </value>
                <value>
                    <fullName>Altres</fullName>
                </value>
                <value>
                    <fullName>Ceridian</fullName>
                </value>
                <value>
                    <fullName>CoAdvantage</fullName>
                </value>
                <value>
                    <fullName>ELS</fullName>
                </value>
                <value>
                    <fullName>Employment Experts</fullName>
                </value>
                <value>
                    <fullName>FrankCrum</fullName>
                </value>
                <value>
                    <fullName>Gevity</fullName>
                </value>
                <value>
                    <fullName>HawaiiWorkplace</fullName>
                </value>
                <value>
                    <fullName>Heartland</fullName>
                </value>
                <value>
                    <fullName>HiHR</fullName>
                </value>
                <value>
                    <fullName>HRAH</fullName>
                </value>
                <value>
                    <fullName>HRBenefix</fullName>
                </value>
                <value>
                    <fullName>InSource</fullName>
                </value>
                <value>
                    <fullName>IntuitPayroll</fullName>
                </value>
                <value>
                    <fullName>MBA</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
                <value>
                    <fullName>NELCO</fullName>
                </value>
                <value>
                    <fullName>Oasis</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>PAU</fullName>
                </value>
                <value>
                    <fullName>PaySmart</fullName>
                </value>
                <value>
                    <fullName>Progressive</fullName>
                </value>
                <value>
                    <fullName>Southeastern</fullName>
                </value>
                <value>
                    <fullName>Talent HR Solutions</fullName>
                </value>
                <value>
                    <fullName>TNT Payroll Services</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Current_Payroll__c</fullName>
        <label>Current Payroll Provider</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>In-House</fullName>
                </value>
                <value>
                    <fullName>ADP</fullName>
                </value>
                <value>
                    <fullName>Altres</fullName>
                </value>
                <value>
                    <fullName>Business Edge</fullName>
                </value>
                <value>
                    <fullName>Ceridian</fullName>
                </value>
                <value>
                    <fullName>Makai HR</fullName>
                </value>
                <value>
                    <fullName>Talent HR</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                    <label>Other/Unknown</label>
                </value>
                <value>
                    <fullName>N/A - Start-Up</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Current_WC_Carrier_Renewal_Date__c</fullName>
        <description>Organization's Current WC Carrier Renewal Date. QMI info used during prospecting potential client</description>
        <inlineHelpText>Organization's Current WC Carrier Renewal Date. QMI info used during prospecting potential client</inlineHelpText>
        <label>Current WC Carrier Renewal Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Current_WC_Carrier__c</fullName>
        <description>Organization's Current WC Carrier. QMI info used during prospecting potential client</description>
        <inlineHelpText>Organization's Current WC Carrier. QMI info used during prospecting potential client</inlineHelpText>
        <label>Current Workers' Comp Provider</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Crum &amp; Forster</fullName>
                </value>
                <value>
                    <fullName>Dongbu Insurance</fullName>
                </value>
                <value>
                    <fullName>First Insurance</fullName>
                </value>
                <value>
                    <fullName>First Comp</fullName>
                </value>
                <value>
                    <fullName>HEMIC</fullName>
                </value>
                <value>
                    <fullName>Island Insurance</fullName>
                </value>
                <value>
                    <fullName>Markel</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                    <label>Other/Unknown</label>
                </value>
                <value>
                    <fullName>N/A - Start-Up</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Days_1stM_to_application__c</fullName>
        <formula>ApplicationDate__c - X1st_Meeting_Date__c</formula>
        <label>Days 1st meeting to application</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_1st_Meeting_To_Close__c</fullName>
        <description>Days 1st meeting to close</description>
        <formula>CloseDate - X1st_Meeting_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Days 1st meeting to close</inlineHelpText>
        <label>Days 1st Meeting To Close</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_1st_meeting_to_proposal__c</fullName>
        <description>Date between 1st meeting to proposal</description>
        <formula>ProposalDate__c - X1st_Meeting_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Date between 1st meeting to proposal</inlineHelpText>
        <label>Days 1st meeting to proposal</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_App_to_Present_Age__c</fullName>
        <formula>TODAY() - Clientspace_Application_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days App to Present (Age)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_Between_App_to_Proposal__c</fullName>
        <formula>Clientspace_Proposal_Date__c - Clientspace_Application_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days Between App to Proposal</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_application_to_close__c</fullName>
        <formula>CloseDate-ApplicationDate__c</formula>
        <label>Days application to close</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Deal_Size__c</fullName>
        <label>Deal Size</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1-5</fullName>
                </value>
                <value>
                    <fullName>6-19</fullName>
                </value>
                <value>
                    <fullName>20-49</fullName>
                </value>
                <value>
                    <fullName>50-99</fullName>
                </value>
                <value>
                    <fullName>100+</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Decision_Making_Process__c</fullName>
        <label>Decision Making Process</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Single point of contact</fullName>
                </value>
                <value>
                    <fullName>Multiple decision makers</fullName>
                </value>
                <value>
                    <fullName>Board</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Dental_Only__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Dental Only</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Direct_to_Carrier__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Direct to Carrier</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Doctor_Dentist__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Doctor/Dentist based pricing</description>
        <inlineHelpText>Doctor/Dentist based pricing</inlineHelpText>
        <label>Doctor/Dentist</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EE_Name__c</fullName>
        <label>EE Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EE_Relationship__c</fullName>
        <label>EE Relationship</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Employee_Count__c</fullName>
        <description>Estimated employee count of the organization</description>
        <inlineHelpText>Estimated employee count of the organization</inlineHelpText>
        <label>Employee Count</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Estimated_Annual_Admin_Amount__c</fullName>
        <label>Estimated Annual Admin Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Estimated_Employee_Count__c</fullName>
        <label>Estimated Employee Count</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Former_ProService_Client_Restart__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Former ProService Client/Restart</description>
        <inlineHelpText>Former ProService Client/Restart</inlineHelpText>
        <label>Former ProService Client/Restart</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Full_Time_Employees__c</fullName>
        <description>Number of full time employees. Converts from leads when opportunity is created. Overwritten when WC is entered into the quote.</description>
        <inlineHelpText>Number of full time employees. Converts from leads when opportunity is created. Overwritten when WC is entered into the quote.</inlineHelpText>
        <label>Full Time Employees</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Gross_Payroll__c</fullName>
        <description>Updated from "Primary Quote"</description>
        <inlineHelpText>Updated from "Primary Quote"</inlineHelpText>
        <label>Gross Payroll</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>HCReadyforPricing__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Flag for Sales Ops to let Pricing know HC is ready for pricing</description>
        <inlineHelpText>Flag for Sales Ops to let Pricing know HC is ready for pricing</inlineHelpText>
        <label>HC ready for pricing</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HC_Invoice_Receive_Date__c</fullName>
        <label>HC Invoice Receive Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>HC_Notes__c</fullName>
        <label>HC Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>HC_Pricing_Complete_Date__c</fullName>
        <label>HC Pricing Complete Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>HC_Pricing_Request_Notes__c</fullName>
        <label>HC Pricing Request Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>HC_Pricing_Request__c</fullName>
        <label>HC Pricing Request </label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Submitted to underwriting</fullName>
                </value>
                <value>
                    <fullName>Prelim tiers</fullName>
                </value>
                <value>
                    <fullName>No eligible/enrolling EEs</fullName>
                </value>
                <value>
                    <fullName>Carve out</fullName>
                </value>
                <value>
                    <fullName>DTC</fullName>
                </value>
                <value>
                    <fullName>Alignment</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>HC_Ready_for_Pricing_Date__c</fullName>
        <label>HC Ready for Pricing Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>HC_pricing_complete__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Flag for Pricing to let Sales Ops know that HC pricing is complete</description>
        <inlineHelpText>Flag for Pricing to let Sales Ops know that HC pricing is complete</inlineHelpText>
        <label>HC pricing complete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ImpPM_BDMComplete__c</fullName>
        <defaultValue>false</defaultValue>
        <label>BDM Handover Complete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ImpPM_BDMHandoverNotes__c</fullName>
        <label>BDM Handover Notes</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ImpPM_DepositAmount__c</fullName>
        <label>Deposit Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ImpPM_DepositType__c</fullName>
        <label>Deposit Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Check Included</fullName>
                </value>
                <value>
                    <fullName>Waived</fullName>
                </value>
                <value>
                    <fullName>Spread Over 1 Payroll</fullName>
                </value>
                <value>
                    <fullName>2 Payrolls</fullName>
                </value>
                <value>
                    <fullName>3 Payrolls</fullName>
                </value>
                <value>
                    <fullName>4 Payrolls</fullName>
                </value>
                <value>
                    <fullName>5 Payrolls</fullName>
                </value>
                <value>
                    <fullName>6 Payrolls</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ImpPM_FirstPayrollDate__c</fullName>
        <label>First Payroll Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ImpPM_Pay_Cycle__c</fullName>
        <description>Pay Cycle - Prospect Pay Frequency</description>
        <inlineHelpText>Pay Cycle - Prospect Pay Frequency</inlineHelpText>
        <label>Pay Cycle</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Weekly</fullName>
                </value>
                <value>
                    <fullName>Bi-Weekly</fullName>
                </value>
                <value>
                    <fullName>Semi-monthly 5/20</fullName>
                </value>
                <value>
                    <fullName>Semi-monthly 7/22</fullName>
                </value>
                <value>
                    <fullName>Semi-monthly 15/EOM</fullName>
                </value>
                <value>
                    <fullName>Semi-monthly 1/15</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ImpPM_PrePaidHCDiscussed__c</fullName>
        <label>Has Pre-Paid Health Care Been Discussed</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Y_or_N</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>ImpPM_PricingGroup__c</fullName>
        <label>Pricing Group</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ImpPM_RecentPaydate__c</fullName>
        <label>Recent Pay date</label>
        <type>Date</type>
    </fields>
</CustomObject>